--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,6 +2,7 @@ name: CI
 
 on:
   workflow_dispatch:
+  push:
   pull_request:
     branches:
     - main
@@ -37,6 +38,15 @@ jobs:
         --fail-at-end
         --update-snapshots
         --no-transfer-progress
+
+    - name: Publish test results
+      uses: dorny/test-reporter@v1
+      if: success() || failure()
+      with:
+        name: Maven Tests (${{ matrix.os }})
+        path: 'lang/**/target/surefire-reports/TEST-*.xml,lang/**/target/failsafe-reports/TEST-*.xml'
+        reporter: java-junit
+        fail-on-error: false
 
     - name: Stage build results
       if: matrix.os == 'ubuntu-latest'
