--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -6,6 +6,7 @@ on:
   pull_request:
     branches:
     - main
+    - manual-pattern-matching-test
   schedule:
   - cron: "0 2 * * 1" # at 02:00 on Monday
 
