--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,131 +1,140 @@
 name: CI
 
 on:
-    workflow_dispatch:
-    pull_request:
-        branches:
-            - main
-    schedule:
-        - cron: "0 2 * * 1" # at 02:00 on Monday
+  workflow_dispatch:
+  pull_request:
+    branches:
+    - main
+  schedule:
+  - cron: "0 2 * * 1" # at 02:00 on Monday
 
 jobs:
-    build-maven:
-        name: Build Maven projects
-        runs-on: ${{ matrix.os }}
-        strategy:
-            fail-fast: false
-            matrix:
-                os: [ubuntu-latest, macos-latest, windows-latest]
+  build-maven:
+    name: Build Maven projects
+    runs-on: ${{ matrix.os }}
+    strategy:
+      fail-fast: false
+      matrix:
+        os: [ubuntu-latest, macos-latest, windows-latest]
 
-        steps:
-            - name: Checkout repository
-              uses: actions/checkout@v6.0.0
+    steps:
+    - name: Checkout repository
+      uses: actions/checkout@v6.0.0
 
-            - name: Setup Java and Maven cache
-              uses: actions/setup-java@v5.0.0
-              with:
-                  distribution: 'temurin'
-                  java-version: '21'
-                  check-latest: true
-                  cache: 'maven'
+    - name: Setup Java and Maven cache
+      uses: actions/setup-java@v5.0.0
+      with:
+        distribution: 'temurin'
+        java-version: '21'
+        check-latest: true
+        cache: 'maven'
 
-            - name: Build projects
-              working-directory: lang
-              run: >
-                  ./mvnw clean verify
-                  --batch-mode
-                  --fail-at-end
-                  --update-snapshots
-                  --no-transfer-progress
+    - name: Build projects
+      working-directory: lang
+      run: >
+        ./mvnw clean verify
+        --batch-mode
+        --fail-at-end
+        --update-snapshots
+        --no-transfer-progress
 
-            - name: Stage build results
-              if: matrix.os == 'ubuntu-latest'
-              run: mkdir staging && find . -path '*/target/*.jar' -exec cp {} staging/ \;
+    - name: Publish test results
+      uses: dorny/test-reporter@v1
+      if: success() || failure()
+      with:
+        name: Maven Tests (${{ matrix.os }})
+        path: 'lang/**/target/surefire-reports/TEST-*.xml,lang/**/target/failsafe-reports/TEST-*.xml'
+        reporter: java-junit
+        fail-on-error: false
 
-            - name: Upload build results
-              if: matrix.os == 'ubuntu-latest'
-              uses: actions/upload-artifact@v5
-              with:
-                  name: framework-and-cli
-                  path: staging/
+    - name: Stage build results
+      if: matrix.os == 'ubuntu-latest'
+      run: mkdir staging && find . -path '*/target/*.jar' -exec cp {} staging/ \;
 
-    build-vscode-extension:
-        name: Build VSCode extension
-        runs-on: ubuntu-latest
-        needs: [build-maven]
+    - name: Upload build results
+      if: matrix.os == 'ubuntu-latest'
+      uses: actions/upload-artifact@v5
+      with:
+        name: framework-and-cli
+        path: staging/
 
-        steps:
-            - name: Checkout repository
-              uses: actions/checkout@v6.0.0
+  build-vscode-extension:
+    name: Build VSCode extension
+    runs-on: ubuntu-latest
+    needs: [build-maven]
 
-            - name: Download Maven build results
-              uses: actions/download-artifact@v6
-              with:
-                  name: framework-and-cli
-                  path: framework-and-cli
+    steps:
+    - name: Checkout repository
+      uses: actions/checkout@v6.0.0
 
-            - name: Extract IDE package
-              run: cp framework-and-cli/tools.vitruv.neojoin.frontend.ide.jar vscode-plugin/
+    - name: Download Maven build results
+      uses: actions/download-artifact@v6
+      with:
+        name: framework-and-cli
+        path: framework-and-cli
 
-            - name: Setup node
-              uses: actions/setup-node@v6
-              with:
-                  node-version: 20
-                  check-latest: true
-                  cache: npm
-                  cache-dependency-path: vscode-plugin/package-lock.json
+    - name: Extract IDE package
+      run: cp framework-and-cli/tools.vitruv.neojoin.frontend.ide.jar vscode-plugin/
 
-            - name: Install dependencies
-              working-directory: vscode-plugin
-              run: npm clean-install
+    - name: Setup node
+      uses: actions/setup-node@v6
+      with:
+        node-version: 20
+        check-latest: true
+        cache: npm
+        cache-dependency-path: vscode-plugin/package-lock.json
 
-            - name: Package extension
-              working-directory: vscode-plugin
-              run: npx @vscode/vsce package
+    - name: Install dependencies
+      working-directory: vscode-plugin
+      run: npm clean-install
 
-            - name: Stage build results
-              run: mkdir staging && cp vscode-plugin/*.vsix staging/;
+    - name: Package extension
+      working-directory: vscode-plugin
+      run: npx @vscode/vsce package
 
-            - name: Upload build results
-              uses: actions/upload-artifact@v5
-              with:
-                  name: vscode-plugin
-                  path: staging/
+    - name: Stage build results
+      run: mkdir staging && cp vscode-plugin/*.vsix staging/;
 
-    sonar:
-        name: SonarQube scan of Maven projects
-        if: github.event_name == 'schedule' || (github.event.pull_request.head.repo.full_name == github.repository && github.actor != 'dependabot[bot]')
-        runs-on: ubuntu-latest
-        needs: [build-maven]
+    - name: Upload build results
+      uses: actions/upload-artifact@v5
+      with:
+        name: vscode-plugin
+        path: staging/
 
-        steps:
-            - name: Checkout repository
-              uses: actions/checkout@v6.0.0
-              with:
-                  fetch-depth: 0
+  sonar:
+    name: SonarQube scan of Maven projects
+    if: github.event_name == 'schedule' || (github.event.pull_request.head.repo.full_name == github.repository && github.actor != 'dependabot[bot]')
+    runs-on: ubuntu-latest
+    needs: [build-maven]
 
-            - name: Setup Java and Maven cache
-              uses: actions/setup-java@v5.0.0
-              with:
-                  distribution: 'temurin'
-                  java-version: '21'
-                  check-latest: true
-                  cache: 'maven'
+    steps:
+    - name: Checkout repository
+      uses: actions/checkout@v6.0.0
+      with:
+        fetch-depth: 0
 
-            - name: Setup SonarQube cache
-              uses: actions/cache@v4
-              with:
-                  path: ~/.sonar/cache
-                  key: ${{ runner.os }}-sonar
-                  restore-keys: ${{ runner.os }}-sonar
+    - name: Setup Java and Maven cache
+      uses: actions/setup-java@v5.0.0
+      with:
+        distribution: 'temurin'
+        java-version: '21'
+        check-latest: true
+        cache: 'maven'
 
-            - name: Analyze projects
-              env:
-                  SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
-              working-directory: lang
-              run: >
-                  ./mvnw clean verify sonar:sonar -P coverage
-                  --batch-mode
-                  --update-snapshots
-                  --no-transfer-progress
-                  -Dsonar.projectKey=vitruv-tools_NeoJoin
+    - name: Setup SonarQube cache
+      uses: actions/cache@v4
+      with:
+        path: ~/.sonar/cache
+        key: ${{ runner.os }}-sonar
+        restore-keys: ${{ runner.os }}-sonar
+
+    - name: Analyze projects
+      env:
+        SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+      working-directory: lang
+      run: >
+        ./mvnw clean verify sonar:sonar -P coverage
+        --batch-mode
+        --update-snapshots
+        --no-transfer-progress
+        -Dsonar.projectKey=vitruv-tools_NeoJoin
